Zone diagram (multiple substations) on a substation grid (#550)
* First try
* Add default matrix behaviour
* Display Substation with Snakelines draw from Substation Layout
* Move snakelines & voltagelevel at the same time
* Using path finding algo
* Improve path finding algo
* Refactor path finder usage
* Fix bugs
* Extract parent link
* Improve path finder usage
* Increase cost of right angles in path finding algo
* Refactor + make unavailable previous snakeline
* Documentation
* Documentation: english
* Increase code coverage
* Increase code coverage + cleaning code
* Update documentation
* Set with & height zone graph without diagram padding
* Use com.powsybl.sld.model.coordinate.Point class
* Use smoothPath method to reduce snakeline point list
* Taking into account PR comments
* Replace Vertical and Horizontal ZoneLayout by MatrixZoneLayout
* Fix sonar issues
* Put snakeline margin into LayoutParameters
* Add path finder type into LayoutParameters
* Height is computated by row & width is computed by column
* Fix code smells
* Taking into account PR comments : refactor path finder parametrized + code smell
* Taking into account PR comments : remove Dijskra factory
* Separate availability & cost into Grid.Node
* Fix bad computation of path finder grid
* Center substation into own matrix cell
* Fix code style
* Update tests files
* Improve snakeline available path from starting point

---------

Signed-off-by: Thomas ADAM <tadam@silicom.fr>